# Back-end/routes/adminRoutes.js
@@ -3,6 +3,7 @@ const router = express.Router();
 
 // Controllers
 const { verificaCredenziali } = require('../controllers/adminController');
+const { getRichieste, confermaRichiesta } = require('../controllers/richiestaGdSController');
 // Middleware 
 const { usaToken, checkRuolo } = require('../middleware/authMiddleware');
 
@@ -19,6 +20,39 @@ router.post('/login', async (req, res) => {
     }   
   */
   verificaCredenziali(req,res);
+});
+
+router.get('/confermagds/lista', usaToken, checkRuolo(['SuperAdmin']), async (req,res)=>{
+  // #swagger.description = 'Ottieni richieste di registrazione per un GdS'
+  /* #swagger.response[200] = {
+      content: {
+        "application/json": {
+          schema: {
+            type: "array",
+            items: {
+              $ref: "#/components/schemas/RichiestaGdS"
+            }
+          }
+        }           
+      }
+    }   
+  */
+  getRichieste(req, res);
+});
+
+router.get('/confermagds/:richiesta_id', usaToken, checkRuolo(['SuperAdmin']), async (req,res)=>{
+  // #swagger.description = 'Conferma la richiesta di registrazione per un GdS'
+  /* #swagger.response[200] = {
+      content: {
+        "application/json": {
+          schema:{
+            $ref: "#/components/schemas/RichiestaGdS"
+          }
+        }           
+      }
+    }   
+  */
+  confermaRichiesta(req, res);
 });
 
 module.exports = router;
